Parse XML annotations

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -31,6 +31,28 @@
     "# Define classes\n",
     "classes = ['With Helmet', 'Without Helmet']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse XML annotations\n",
+    "def parse_annotation(annotation_file):\n",
+    "    tree = etree.parse(annotation_file)\n",
+    "    root = tree.getroot()\n",
+    "    objects = []\n",
+    "    for obj in root.findall('object'):\n",
+    "        obj_struct = {}\n",
+    "        obj_struct['name'] = obj.find('name').text\n",
+    "        bbox = obj.find('bndbox')\n",
+    "        obj_struct['bbox'] = [int(bbox.find('xmin').text), int(bbox.find('ymin').text),\n",
+    "                              int(bbox.find('xmax').text), int(bbox.find('ymax').text)]\n",
+    "        objects.append(obj_struct)\n",
+    "    return objects\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
