# Load images and annotations

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,6 +52,35 @@
     "        objects.append(obj_struct)\n",
     "    return objects\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load images and annotations\n",
+    "def load_data(annotations_dir, images_dir):\n",
+    "    i=0\n",
+    "    X, y = [], []\n",
+    "    for annotation_file in os.listdir(annotations_dir):\n",
+    "        if i>535:\n",
+    "            return\n",
+    "        if annotation_file.endswith('.xml'):\n",
+    "            annotation_path = os.path.join(annotations_dir, annotation_file)\n",
+    "            objects = parse_annotation(annotation_path)\n",
+    "            image_path = os.path.join(images_dir, annotation_file.replace('.xml', '.png'))\n",
+    "            image = load_img(image_path, target_size=(224, 224))\n",
+    "            image = img_to_array(image)\n",
+    "            X.append(preprocess_input(image))\n",
+    "            labels = [0] * len(classes)\n",
+    "            for obj in objects:\n",
+    "                label_idx = classes.index(obj['name'])\n",
+    "                labels[label_idx] = 1\n",
+    "            y.append(labels)\n",
+    "            i=i+1\n",
+    "    return np.array(X), np.array(y)"
    ]
   }
  ],
