--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -16,7 +16,8 @@
     "from keras.applications import ResNet50\n",
     "from keras.applications.resnet50 import preprocess_input\n",
     "from keras.preprocessing.image import load_img, img_to_array\n",
-    "from lxml import etree"
+    "from lxml import etree\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
