adding first and second laye

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -84,6 +84,26 @@
     "            i=i+1\n",
     "    return np.array(X), np.array(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the CNN model\n",
+    "model = models.Sequential()\n",
+    "\n",
+    "# Adding first convolutional layer with pooling\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(224, 224, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.BatchNormalization())\n",
+    "\n",
+    "# Adding second convolutional layer with pooling\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.BatchNormalization())\n"
+   ]
   }
  ],
  "metadata": {
