--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -102,7 +102,9 @@
     "# Adding second convolutional layer with pooling\n",
     "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
-    "model.add(layers.BatchNormalization())\n"
+    "model.add(layers.BatchNormalization())\n",
+    "# Adding flattening layer\n",
+    "model.add(layers.Flatten())"
    ]
   }
  ],
