Adding a fully connected layer

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -104,7 +104,10 @@
     "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.BatchNormalization())\n",
     "# Adding flattening layer\n",
-    "model.add(layers.Flatten())"
+    "model.add(layers.Flatten())\n",
+    "# Adding a fully connected layer\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(len(classes), activation='softmax'))"
    ]
   }
  ],
