Compiling the model

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -107,7 +107,14 @@
     "model.add(layers.Flatten())\n",
     "# Adding a fully connected layer\n",
     "model.add(layers.Dense(64, activation='relu'))\n",
-    "model.add(layers.Dense(len(classes), activation='softmax'))"
+    "model.add(layers.Dense(len(classes), activation='softmax'))\n",
+    "# Compiling the model\n",
+    "model.compile(optimizer=optimizers.Adam(learning_rate=0.00001), \n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Fitting the CNN to the images\n",
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=32) "
    ]
   }
  ],
