visualize loss and accuracy

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -114,7 +114,17 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "# Fitting the CNN to the images\n",
-    "history = model.fit(X_train, y_train, epochs=10, batch_size=32) "
+    "history = model.fit(X_train, y_train, epochs=10, batch_size=32) \n",
+    "\n",
+    "# Plot training history to visualize loss and accuracy\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.plot(history.history['loss'], label='Training Loss')\n",
+    "plt.plot(history.history['accuracy'], label='Training Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss / Accuracy')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
