--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -166,6 +166,18 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "saved_model_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\savedmodel2.h5\"\n",
+    "model.save(saved_model_dir)\n",
+    "print(\"Model saved successfully at:\", saved_model_dir)"
+   ]
   }
  ],
  "metadata": {
