--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -17,7 +17,9 @@
     "from keras.applications.resnet50 import preprocess_input\n",
     "from keras.preprocessing.image import load_img, img_to_array\n",
     "from lxml import etree\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import xml.etree.ElementTree as ET"
    ]
   },
   {
