--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -180,6 +180,42 @@
     "model.save(saved_model_dir)\n",
     "print(\"Model saved successfully at:\", saved_model_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the saved model\n",
+    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\savedmodel2.h5\")\n",
+    "\n",
+    "# Function to preprocess the input image\n",
+    "def preprocess_image(image_path):\n",
+    "    image = tf.keras.preprocessing.image.load_img(image_path, target_size=(224, 224))\n",
+    "    image = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    image = tf.keras.applications.resnet50.preprocess_input(image)\n",
+    "    return image\n",
+    "\n",
+    "# Function to parse the XML annotation\n",
+    "def parse_annotation(annotation_path):\n",
+    "    tree = ET.parse(annotation_path)\n",
+    "    root = tree.getroot()\n",
+    "    for obj in root.findall('object'):\n",
+    "        return obj.find('name').text  # Return the class label\n",
+    "\n",
+    "# Path to validation images and annotations\n",
+    "validation_images_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\validation\\\\val-image\"\n",
+    "validation_annotations_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\validation\\\\val-image-annotations\"  \n",
+    "\n",
+    "# Get all image filenames in the directory\n",
+    "image_filenames = os.listdir(validation_images_dir)\n",
+    "\n",
+    "# Initialize lists to store actual and predicted labels\n",
+    "y_true = []\n",
+    "y_pred = []\n"
+   ]
   }
  ],
  "metadata": {
