predictions on all validation

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -214,7 +214,25 @@
     "\n",
     "# Initialize lists to store actual and predicted labels\n",
     "y_true = []\n",
-    "y_pred = []\n"
+    "y_pred = []\n",
+    "# Make predictions on all validation images\n",
+    "for image_filename in image_filenames:\n",
+    "    image_path = os.path.join(validation_images_dir, image_filename)\n",
+    "    preprocessed_image = preprocess_image(image_path)\n",
+    "    prediction = loaded_model.predict(preprocessed_image)\n",
+    "    \n",
+    "    # Append actual and predicted labels to respective lists\n",
+    "    annotation_path = os.path.join(validation_annotations_dir, image_filename.replace('.png', '.xml'))\n",
+    "    actual_label = parse_annotation(annotation_path)  # Get the actual label from the XML annotation\n",
+    "    y_true.append(actual_label)\n",
+    "    predicted_label = classes[np.argmax(prediction)]  # Convert prediction to string label\n",
+    "    y_pred.append(predicted_label)\n",
+    "\n",
+    "# Print classification report\n",
+    "print(classification_report(y_true, y_pred))\n",
+    "\n",
+    "# Print confusion matrix\n",
+    "print(confusion_matrix(y_true, y_pred))"
    ]
   }
  ],
