--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -234,6 +234,15 @@
     "# Print confusion matrix\n",
     "print(confusion_matrix(y_true, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing cell"
+   ]
   }
  ],
  "metadata": {
