preprocess input image

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -241,7 +241,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#testing cell"
+    "#testing cell\n",
+    "# Load the saved model\n",
+    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\savedmodel2.h5\")\n",
+    "\n",
+    "# Function to preprocess the input image\n",
+    "def preprocess_image(image_path):\n",
+    "    image = tf.keras.preprocessing.image.load_img(image_path, target_size=(224, 224))\n",
+    "    image = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    image = tf.keras.applications.resnet50.preprocess_input(image)\n",
+    "    return image"
    ]
   }
  ],
