--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -251,7 +251,12 @@
     "    image = tf.keras.preprocessing.image.img_to_array(image)\n",
     "    image = np.expand_dims(image, axis=0)\n",
     "    image = tf.keras.applications.resnet50.preprocess_input(image)\n",
-    "    return image"
+    "    return image\n",
+    "# Function to make predictions on images\n",
+    "def predict_image(image_path, model):\n",
+    "    preprocessed_image = preprocess_image(image_path)\n",
+    "    prediction = model.predict(preprocessed_image)\n",
+    "    return prediction"
    ]
   }
  ],
