--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -256,7 +256,18 @@
     "def predict_image(image_path, model):\n",
     "    preprocessed_image = preprocess_image(image_path)\n",
     "    prediction = model.predict(preprocessed_image)\n",
-    "    return prediction"
+    "    return prediction\n",
+    "# Path to test images\n",
+    "test_images_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\test\\\\tst-image\"\n",
+    "\n",
+    "# Get all image filenames in the directory\n",
+    "image_filenames = os.listdir(test_images_dir)\n",
+    "\n",
+    "# Make predictions on all test images\n",
+    "for image_filename in image_filenames:\n",
+    "    image_path = os.path.join(test_images_dir, image_filename)\n",
+    "    prediction = predict_image(image_path, loaded_model)\n",
+    "    print(\"Prediction for\", image_filename, \":\", prediction)\n"
    ]
   }
  ],
