--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -19,7 +19,7 @@
     "from lxml import etree\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n"
    ]
   },
   {
@@ -268,6 +268,17 @@
     "    image_path = os.path.join(test_images_dir, image_filename)\n",
     "    prediction = predict_image(image_path, loaded_model)\n",
     "    print(\"Prediction for\", image_filename, \":\", prediction)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.applications import vgg16"
    ]
   }
  ],
