--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -278,7 +278,20 @@
    "source": [
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
     "from tensorflow.keras.models import load_model\n",
-    "from tensorflow.keras.applications import vgg16"
+    "from tensorflow.keras.applications import vgg16\n",
+    "# Define paths\n",
+    "saved_model_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\savedmodel2.h5\"\n",
+    "\n",
+    "# Load the saved model\n",
+    "model = load_model(saved_model_dir)\n",
+    "\n",
+    "# Define classes\n",
+    "classes = ['With Helmet', 'Without Helmet']\n",
+    "\n",
+    "# Define a function to preprocess input image\n",
+    "def preprocess_input(image):\n",
+    "    # Preprocess the image for VGG16 model\n",
+    "    return vgg16.preprocess_input(image)"
    ]
   }
  ],
