function to visualize predictions

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -291,7 +291,14 @@
     "# Define a function to preprocess input image\n",
     "def preprocess_input(image):\n",
     "    # Preprocess the image for VGG16 model\n",
-    "    return vgg16.preprocess_input(image)"
+    "    return vgg16.preprocess_input(image)\n",
+    "# Define a function to visualize predictions\n",
+    "def visualize_predictions(image_path):\n",
+    "    # Load and preprocess the image\n",
+    "    image = load_img(image_path, target_size=(224, 224))\n",
+    "    image = img_to_array(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    image = preprocess_input(image)"
    ]
   }
  ],
