Display the image and prediction

--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -298,7 +298,16 @@
     "    image = load_img(image_path, target_size=(224, 224))\n",
     "    image = img_to_array(image)\n",
     "    image = np.expand_dims(image, axis=0)\n",
-    "    image = preprocess_input(image)"
+    "    image = preprocess_input(image)\n",
+    "      # Make prediction\n",
+    "    prediction = model.predict(image)\n",
+    "    predicted_class = np.argmax(prediction)\n",
+    "    \n",
+    "    # Display the image and prediction\n",
+    "    plt.imshow(load_img(image_path))\n",
+    "    plt.title(f\"Predicted: {classes[predicted_class]}\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
    ]
   }
  ],
