--- a/CNN-model.ipynb
+++ b/CNN-model.ipynb
@@ -307,7 +307,14 @@
     "    plt.imshow(load_img(image_path))\n",
     "    plt.title(f\"Predicted: {classes[predicted_class]}\")\n",
     "    plt.axis('off')\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "# Example usage\n",
+    "image_path = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\test\\\\tst-image\\\\BikesHelmets726.png\"\n",
+    "visualize_predictions(image_path)\n",
+    "\n",
+    "# Save the model\n",
+    "model.save(saved_model_dir)"
    ]
   }
  ],
