--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -134,6 +134,56 @@
     "# Train model\n",
     "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_split=0.2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#validaaation\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Load the saved model\n",
+    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")\n",
+    "\n",
+    "# Function to preprocess the input image\n",
+    "def preprocess_image(image_path):\n",
+    "    image = tf.keras.preprocessing.image.load_img(image_path, target_size=(224, 224))\n",
+    "    image = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    image = tf.keras.applications.resnet50.preprocess_input(image)\n",
+    "    return image\n",
+    "\n",
+    "# Path to validation images\n",
+    "validation_images_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\validation\\\\val-image\"\n",
+    "\n",
+    "# Get all image filenames in the directory\n",
+    "image_filenames = os.listdir(validation_images_dir)\n",
+    "\n",
+    "# Initialize lists to store actual and predicted labels\n",
+    "y_true = []\n",
+    "y_pred = []\n",
+    "\n",
+    "# Make predictions on all validation images\n",
+    "for image_filename in image_filenames:\n",
+    "    image_path = os.path.join(validation_images_dir, image_filename)\n",
+    "    preprocessed_image = preprocess_image(image_path)\n",
+    "    prediction = loaded_model.predict(preprocessed_image)\n",
+    "    \n",
+    "    # Append actual and predicted labels to respective lists\n",
+    "    y_true.append('BikesHelmets537')\n",
+    "    y_pred.append(np.argmax(prediction))\n",
+    "\n",
+    "# Print classification report\n",
+    "print(2345)\n",
+    "\n",
+    "# Print confusion matrix\n",
+    "print()\n"
+   ]
   }
  ],
  "metadata": {
