--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -184,6 +184,15 @@
     "# Print confusion matrix\n",
     "print()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")"
+   ]
   }
  ],
  "metadata": {
