--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -193,6 +193,16 @@
    "source": [
     "model.save(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the saved model\n",
+    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")\n"
+   ]
   }
  ],
  "metadata": {
