--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -201,7 +201,23 @@
    "outputs": [],
    "source": [
     "# Load the saved model\n",
-    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")\n"
+    "loaded_model = tf.keras.models.load_model(\"C:\\\\Users\\\\mazen\\\\Desktop\\\\saved model\\\\model.h5\")\n",
+    "# Function to preprocess the input image\n",
+    "def preprocess_image(image_path):\n",
+    "    image = tf.keras.preprocessing.image.load_img(image_path, target_size=(224, 224))\n",
+    "    image = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "    image = np.expand_dims(image, axis=0)\n",
+    "    image = tf.keras.applications.resnet50.preprocess_input(image)\n",
+    "    return image\n",
+    "\n",
+    "# Function to make predictions on images\n",
+    "def predict_image(image_path, model):\n",
+    "    preprocessed_image = preprocess_image(image_path)\n",
+    "    prediction = model.predict(preprocessed_image)\n",
+    "    return prediction\n",
+    "\n",
+    "# Path to test images\n",
+    "test_images_dir = \"C:\\\\Users\\\\mazen\\\\Desktop\\\\archive\\\\test\\\\tst-image\"\n"
    ]
   }
  ],
