--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -15,7 +15,9 @@
     "from keras.applications import ResNet50\n",
     "from keras.applications.resnet50 import preprocess_input\n",
     "from keras.preprocessing.image import load_img, img_to_array\n",
-    "from lxml import etree\n"
+    "from lxml import etree\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as patches"
    ]
   },
   {
