--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -230,6 +230,47 @@
     "    prediction = predict_image(image_path, loaded_model)\n",
     "    print(\"Prediction for\", image_filename, \":\", prediction)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def visualize_predictions(image_path, model, classes):\n",
+    "    # Load and preprocess the image\n",
+    "    image = tf.keras.preprocessing.image.load_img(image_path)\n",
+    "    image_array = tf.keras.preprocessing.image.img_to_array(image)\n",
+    "    preprocessed_image = tf.keras.applications.resnet50.preprocess_input(image_array)\n",
+    "    preprocessed_image = np.expand_dims(preprocessed_image, axis=0)\n",
+    "    \n",
+    "    # Make predictions\n",
+    "    predictions = model.predict(preprocessed_image)\n",
+    "    \n",
+    "    # Define threshold for considering a detection\n",
+    "    threshold = 0.5\n",
+    "    \n",
+    "    # Visualize predictions\n",
+    "    fig, ax = plt.subplots(1)\n",
+    "    ax.imshow(image_array / 255.)  # Normalize pixel values to [0, 1]\n",
+    "    \n",
+    "    for i in range(len(classes)):\n",
+    "        if predictions[0][i] > threshold:\n",
+    "            # Get class label and bounding box coordinates\n",
+    "            class_label = classes[i]\n",
+    "            xmin, ymin, xmax, ymax = 0, 0, 0, 0  # Adjust these values according to your model's output\n",
+    "            \n",
+    "            # Draw bounding box\n",
+    "            rect = patches.Rectangle((xmin, ymin), xmax - xmin, ymax - ymin,\n",
+    "                                     linewidth=1, edgecolor='r', facecolor='none')\n",
+    "            ax.add_patch(rect)\n",
+    "            \n",
+    "            # Add class label\n",
+    "            ax.text(xmin, ymin - 5, class_label, color='r')\n",
+    "    \n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
