--- a/FasterRCNN-model.ipynb
+++ b/FasterRCNN-model.ipynb
@@ -269,7 +269,10 @@
     "            # Add class label\n",
     "            ax.text(xmin, ymin - 5, class_label, color='r')\n",
     "    \n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    # Test the function with an image\n",
+    "image_path = os.path.join(test_images_dir, \"BikesHelmets726.png\")\n",
+    "visualize_predictions(image_path, loaded_model, classes)"
    ]
   }
  ],
